--- a/com.cloudera.companies.core/com.cloudera.companies.core.etl.hdfs/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.etl.hdfs/pom.xml
@@ -13,4 +13,13 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.cloudera.companies.repo.bom</groupId>
+			<artifactId>com.cloudera.companies.repo.bom.hadoop</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+		</dependency>
+	</dependencies>
+
 </project>
