--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.hadoop/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.hadoop/pom.xml
@@ -2,20 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.cloudera.companies</groupId>
-	<artifactId>com.cloudera.companies.repo</artifactId>
+	<groupId>com.cloudera.companies.repo.bom</groupId>
+	<artifactId>com.cloudera.companies.repo.bom.hadoop</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
-		<groupId>com.cloudera</groupId>
-		<artifactId>com.cloudera.companies</artifactId>
+		<groupId>com.cloudera.companies.repo</groupId>
+		<artifactId>com.cloudera.companies.repo.bom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
-	<modules>
-		<module>com.cloudera.companies.repo.m2</module>
-		<module>com.cloudera.companies.repo.bom</module>
-	</modules>
 
 </project>
