add smaple data

--- a/com.cloudera.companies.core/com.cloudera.companies.core.etl.hdfs/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.etl.hdfs/pom.xml
@@ -19,6 +19,7 @@
 			<artifactId>com.cloudera.companies.repo.bom.hadoop</artifactId>
 			<version>${project.version}</version>
 			<type>pom</type>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
