--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cloudera.companies.core</groupId>
-	<artifactId>com.cloudera.companies.core.etl.hive</artifactId>
+	<artifactId>com.cloudera.companies.core.ingest</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
