--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
 		<hadoop.version>2.0.0-cdh4.1.2</hadoop.version>
 		<hadoop-mr.version>2.0.0-mr1-cdh4.1.2</hadoop-mr.version>
 		<hadoop-hive.version>0.9.0-cdh4.1.2</hadoop-hive.version>
-		<junit.version>4.8.1</junit.version>
+		<opencsv.version>2.3</opencsv.version>
+		<slf4j.version>1.6.4</slf4j.version>
+		<log4j.version>1.2.16</log4j.version>
+		<junit.version>4.9</junit.version>
+		<mrunit.version>0.9.0-incubating</mrunit.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
