refactor repo bill of materials

--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.core/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.core/pom.xml
@@ -2,21 +2,27 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.cloudera.companies.repo.bom</groupId>
-	<artifactId>com.cloudera.companies.repo.bom.hadoop</artifactId>
+	<groupId>com.cloudera.companies.repo.bom.cdh.runtime</groupId>
+	<artifactId>com.cloudera.companies.repo.bom.cdh.runtime.core</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
-		<groupId>com.cloudera.companies.repo</groupId>
-		<artifactId>com.cloudera.companies.repo.bom</artifactId>
+		<groupId>com.cloudera.companies.repo.bom.cdh</groupId>
+		<artifactId>com.cloudera.companies.repo.bom.cdh.runtime</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-client</artifactId>
+			<artifactId>hadoop-dist</artifactId>
+			<version>${hadoop.version}</version>
+			<type>tar.gz</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-test</artifactId>
 			<version>${hadoop-mr.version}</version>
 		</dependency>
 	</dependencies>
