--- a/com.cloudera.companies.core/com.cloudera.companies.core.common/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.common/pom.xml
@@ -16,13 +16,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.cloudera.companies.repo.bom</groupId>
-			<artifactId>com.cloudera.companies.repo.bom.hadoop</artifactId>
+			<artifactId>com.cloudera.companies.repo.bom.log</artifactId>
 			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.cloudera.companies.repo.bom</groupId>
-			<artifactId>com.cloudera.companies.repo.bom.log</artifactId>
+			<groupId>com.cloudera.companies.repo.bom.cdh.client</groupId>
+			<artifactId>com.cloudera.companies.repo.bom.cdh.client.core</artifactId>
 			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
