--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.client/com.cloudera.companies.repo.bom.cdh.client.pig/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.client/com.cloudera.companies.repo.bom.cdh.client.pig/pom.xml
@@ -2,14 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.cloudera.companies.repo.bom</groupId>
-	<artifactId>com.cloudera.companies.repo.bom.hive</artifactId>
+	<groupId>com.cloudera.companies.repo.bom.cdh.client</groupId>
+	<artifactId>com.cloudera.companies.repo.bom.cdh.client.pig</artifactId>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
-		<groupId>com.cloudera.companies.repo</groupId>
-		<artifactId>com.cloudera.companies.repo.bom</artifactId>
+		<groupId>com.cloudera.companies.repo.bom.cdh</groupId>
+		<artifactId>com.cloudera.companies.repo.bom.cdh.client</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
