--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 		<log4j.version>1.2.16</log4j.version>
 		<junit.version>4.9</junit.version>
 		<mrunit.version>0.9.0-incubating</mrunit.version>
+		
+		<project.runtime-test-dir>test-runtime</project.runtime-test-dir>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -75,6 +77,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.2.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.5.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
