--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<properties>
 
 		<maven.test.skip>false</maven.test.skip>
+		<maven.system-test.skip>true</maven.system-test.skip>
 		<maven.integration-test.skip>true</maven.integration-test.skip>
 		<maven.assembly.skip>true</maven.assembly.skip>
 
@@ -32,7 +33,7 @@
 		<log4j.version>1.2.16</log4j.version>
 		<junit.version>4.9</junit.version>
 		<mrunit.version>0.9.0-incubating</mrunit.version>
-		
+
 		<project.runtime-test-dir>test-runtime</project.runtime-test-dir>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -82,6 +83,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.5.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
