--- a/com.cloudera.companies.core/com.cloudera.companies.core.common/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.common/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>${opencsv.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
