implement file copy paramater validation and tests

--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
@@ -5,5 +5,5 @@ log4j.appender.stdout.layout.conversionPattern=%d %p [%t] %c %l %m%n
 
 log4j.logger.DataNucleus=FATAL
 
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=INFO,stdout
 
