--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern=%d %p [%t] %c %l %m%n
 
 log4j.logger.DataNucleus=FATAL
+log4j.logger.org.apache.hadoop.util.NativeCodeLoader=ERROR
 
 log4j.rootLogger=INFO,stdout
 
