impl file ingest

--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
@@ -80,7 +80,7 @@
 						</goals>
 						<configuration>
 							<includeArtifactIds>com.cloudera.companies.data</includeArtifactIds>
-							<outputDirectory>${project.build.directory}/test-input</outputDirectory>
+							<outputDirectory>${project.build.directory}/test-data</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
