--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
@@ -13,4 +13,35 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.ingest</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>attached</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/tar.xml</descriptor>
+							</descriptors>
+							<skipAssembly>${maven.assembly.skip}</skipAssembly>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
