assemble hadoop job jar

--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
@@ -18,6 +18,7 @@
 			<groupId>com.cloudera.companies.core</groupId>
 			<artifactId>com.cloudera.companies.core.ingest</artifactId>
 			<version>${project.version}</version>
+			<classifier>hadoop-job</classifier>
 		</dependency>
 	</dependencies>
 
