--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.core/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.core/pom.xml
@@ -22,6 +22,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>${hadoop-mr.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-test</artifactId>
 			<version>${hadoop-mr.version}</version>
 		</dependency>
