write success marker file out as groups of files asynchronously written

--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/src/test/resources/log4j.properties
@@ -6,5 +6,10 @@ log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 log4j.logger.DataNucleus=FATAL
 log4j.logger.org.apache.hadoop.util.NativeCodeLoader=ERROR
 
+# Hide deprecation warnings coming from framework code
+log4j.logger.org.apache.hadoop.mapred.JobClient=ERROR
+log4j.logger.org.apache.hadoop.conf.Configuration=ERROR
+log4j.logger.mapreduce.Counters=ERROR
+
 log4j.rootLogger=INFO,stdout
 
