--- a/com.cloudera.companies.core/pom.xml
+++ b/com.cloudera.companies.core/pom.xml
@@ -32,4 +32,26 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<filters>
+			<filter>./../com.cloudera.companies.core.assembly/src/main/filter/${target.environment}_filter.properties</filter>
+		</filters>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/webapp</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
+	</build>
+
 </project>
