--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
 		<maven.test.skip>false</maven.test.skip>
 		<maven.system-test.skip>true</maven.system-test.skip>
 		<maven.integration-test.skip>true</maven.integration-test.skip>
-		<maven.assembly.skip>true</maven.assembly.skip>
 
 		<java.version>1.6</java.version>
 		<hadoop.version>2.0.0-cdh4.1.2</hadoop.version>
@@ -63,6 +62,7 @@
 				<maven.test.skip>true</maven.test.skip>
 				<maven.system-test.skip>true</maven.system-test.skip>
 				<maven.integration-test.skip>true</maven.integration-test.skip>
+				<maven.data-download.skip>true</maven.data-download.skip>
 				<maven.assembly.skip>false</maven.assembly.skip>
 			</properties>
 		</profile>
@@ -73,6 +73,7 @@
 				<maven.test.skip>true</maven.test.skip>
 				<maven.system-test.skip>true</maven.system-test.skip>
 				<maven.integration-test.skip>true</maven.integration-test.skip>
+				<maven.data-download.skip>true</maven.data-download.skip>
 				<maven.assembly.skip>false</maven.assembly.skip>
 			</properties>
 		</profile>
@@ -83,6 +84,7 @@
 				<maven.test.skip>true</maven.test.skip>
 				<maven.system-test.skip>true</maven.system-test.skip>
 				<maven.integration-test.skip>true</maven.integration-test.skip>
+				<maven.data-download.skip>true</maven.data-download.skip>
 				<maven.assembly.skip>true</maven.assembly.skip>
 			</properties>
 		</profile>
