--- a/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
@@ -21,8 +21,8 @@
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.cloudera.companies.repo.bom.cdh.client</groupId>
-			<artifactId>com.cloudera.companies.repo.bom.cdh.client.core</artifactId>
+			<groupId>com.cloudera.companies.repo.bom.cdh.api</groupId>
+			<artifactId>com.cloudera.companies.repo.bom.cdh.api.core</artifactId>
 			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
