--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.local/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.local/pom.xml
@@ -19,6 +19,32 @@
 			<artifactId>com.cloudera.companies.repo.bom.cdh.runtime.core</artifactId>
 			<version>${project.version}</version>
 			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies.repo.bom.cdh.api</groupId>
+			<artifactId>com.cloudera.companies.repo.bom.cdh.api.core</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.ingest</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -26,28 +52,10 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>resource-dependencies</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.apache.hadoop</groupId>
-									<artifactId>hadoop-dist</artifactId>
-									<version>${hadoop.version}</version>
-									<type>tar.gz</type>
-									<outputDirectory>target/${project.runtime-test-dir}</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-							<skip>${maven.system-test.skip}</skip>
-						</configuration>
-					</execution>
-				</executions>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>${maven.system-test.skip}</skipTests>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
