--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
@@ -13,4 +13,34 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>resource-dependencies</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.hadoop</groupId>
+									<artifactId>hadoop-dist</artifactId>
+									<version>${hadoop.version}</version>
+									<type>tar.gz</type>
+									<outputDirectory>target/${project.runtime-test-dir}</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<skip>${maven.integration-test.skip}</skip>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
