--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+	    <module>com.cloudera.companies.repo.bom.cdh.api</module>
 	    <module>com.cloudera.companies.repo.bom.cdh.client</module>
 	    <module>com.cloudera.companies.repo.bom.cdh.runtime</module>
 	</modules>
