--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
@@ -20,7 +20,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>resource-dependencies</id>
+						<id>unpack-runtime</id>
 						<phase>process-test-resources</phase>
 						<goals>
 							<goal>unpack</goal>
@@ -33,6 +33,26 @@
 									<version>${hadoop.version}</version>
 									<type>tar.gz</type>
 									<outputDirectory>target/${project.runtime-test-dir}</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<skip>${maven.integration-test.skip}</skip>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-assembly</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>com.cloudera.companies.core</groupId>
+									<artifactId>com.cloudera.companies.core.assembly</artifactId>
+									<version>${project.version}</version>
+									<classifier>distribution</classifier>
+									<type>tar.gz</type>
+									<outputDirectory>target/${project.assembly-test-dir}</outputDirectory>
 								</artifactItem>
 							</artifactItems>
 							<skip>${maven.integration-test.skip}</skip>
