--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
@@ -13,8 +13,54 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.assembly</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies</groupId>
+			<artifactId>com.cloudera.companies.data</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>${commons-exec.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>${maven.integration-test.skip}</skipTests>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -56,6 +102,17 @@
 								</artifactItem>
 							</artifactItems>
 							<skip>${maven.integration-test.skip}</skip>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-data-sample</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeArtifactIds>com.cloudera.companies.data</includeArtifactIds>
+							<outputDirectory>${project.build.directory}/test-data</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
