--- a/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.ingest/pom.xml
@@ -26,7 +26,7 @@
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
 		</dependency>
