add fsck asserts to unit/system/integration tests

--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.local/src/test/resources/log4j.properties
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.local/src/test/resources/log4j.properties
@@ -5,6 +5,8 @@ log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 
 log4j.logger.DataNucleus=FATAL
 log4j.logger.org.apache.hadoop.util.NativeCodeLoader=ERROR
+log4j.logger.org.apache.hadoop.hdfs.server.blockmanagement.BlockManager=ERROR
+log4j.logger.org.apache.hadoop.yarn.event.AsyncDispatcher=ERROR
 
 log4j.rootLogger=INFO,stdout
 
