update shell launchers

--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
@@ -5,4 +5,4 @@ export COMPANIES_EXPORT_DATA_DIR=/tmp/companies
 export COMPANIES_EXPORT_DATA_ZIP_DIR=$COMPANIES_EXPORT_DATA_DIR/zip
 export COMPANIES_EXPORT_DATA_SEQ_DIR=$COMPANIES_EXPORT_DATA_DIR/seq
 
-export COMPANIES_DIR=$(dirname $0)"/.."
+export COMPANIES_INGEST_THREADS=4
