add better dataset level counters

--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
@@ -2,7 +2,8 @@ export HADOOP_CONF_DIR=$WHIRR_WRAPPER_HOME/cfg/cdh-cluster
 
 export COMPANIES_IMPORT_DATA_DIR=/root/dev/cloudera-companies/com.cloudera.companies.data/src/data/resources/basiccompany/warehouse/zip
 export COMPANIES_EXPORT_DATA_DIR=/tmp/companies
-export COMPANIES_EXPORT_DATA_ZIP_DIR=$COMPANIES_EXPORT_DATA_DIR/zip
-export COMPANIES_EXPORT_DATA_SEQ_DIR=$COMPANIES_EXPORT_DATA_DIR/seq
+export COMPANIES_EXPORT_DATA_ZIP_DIR=$COMPANIES_EXPORT_DATA_DIR/original
+export COMPANIES_EXPORT_DATA_SEQ_DIR=$COMPANIES_EXPORT_DATA_DIR/processed
 
 export COMPANIES_INGEST_THREADS=4
+export COMPANIES_INGEST_FSCK_CLEAN=false
