--- a/com.cloudera.companies.repo/pom.xml
+++ b/com.cloudera.companies.repo/pom.xml
@@ -14,7 +14,8 @@
 	</parent>
 
 	<modules>
-		<module>com.cloudera.companies.repo.m2</module>
+		<module>com.cloudera.companies.repo.external</module>
+		<module>com.cloudera.companies.repo.runtime</module>
 		<module>com.cloudera.companies.repo.bom</module>
 	</modules>
 
