--- a/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
@@ -33,6 +33,12 @@
 			<type>pom</type>
 		</dependency>
 		<dependency>
+			<groupId>com.cloudera.companies.repo.bom.cdh.runtime</groupId>
+			<artifactId>com.cloudera.companies.repo.bom.cdh.runtime.hive</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
