--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.hive/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.bom/com.cloudera.companies.repo.bom.cdh/com.cloudera.companies.repo.bom.cdh.runtime/com.cloudera.companies.repo.bom.cdh.runtime.hive/pom.xml
@@ -13,4 +13,32 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-exec</artifactId>
+			<version>${hadoop-hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-builtins</artifactId>
+			<version>${hadoop-hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-service</artifactId>
+			<version>${hadoop-hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-shims</artifactId>
+			<version>${hadoop-hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-cli</artifactId>
+			<version>${hadoop-hive.version}</version>
+		</dependency>
+	</dependencies>
+
 </project>
