--- a/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test.remote/pom.xml
@@ -98,6 +98,27 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>process-sources</phase>
+						<configuration>
+							<target>
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
+								<symlink
+									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
+									resource="../../../../com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/target/test-runtime/hadoop"
+									failonerror="false" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
