--- a/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.test/pom.xml
@@ -45,4 +45,30 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>process-sources</phase>
+						<configuration>
+							<target>
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
+								<symlink
+									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
+									resource="../../../../com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/target/test-runtime/hadoop"
+									failonerror="false" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
