--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
@@ -48,6 +48,7 @@
 						<phase>process-sources</phase>
 						<configuration>
 							<target>
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
 								<symlink
 									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
 									resource="${project.build.directory}/${project.runtime-test-dir}/hadoop-${hadoop.version}"
