--- a/com.cloudera.companies.core/com.cloudera.companies.core.query/src/test/resources/log4j.properties
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.query/src/test/resources/log4j.properties
@@ -6,4 +6,6 @@ log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 log4j.logger.DataNucleus=FATAL
 log4j.logger.org.apache.hadoop.util.NativeCodeLoader=ERROR
 
+log4j.logger.com.cloudera.companies.core.test=DEBUG
+
 log4j.rootLogger=INFO,stdout
