add new reference data, parameterise query ddl, update assembly with query module

--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
@@ -4,6 +4,10 @@ export COMPANIES_IMPORT_DATA_DIR=/root/dev/cloudera-companies/com.cloudera.compa
 export COMPANIES_EXPORT_DATA_DIR=/tmp/companies
 export COMPANIES_EXPORT_DATA_ZIP_DIR=$COMPANIES_EXPORT_DATA_DIR/original
 export COMPANIES_EXPORT_DATA_SEQ_DIR=$COMPANIES_EXPORT_DATA_DIR/processed
+export COMPANIES_EXPORT_DATA_SEQ_CLEANSED_DIR=$COMPANIES_EXPORT_DATA_DIR/processed/cleansed
+export COMPANIES_EXPORT_DATA_SEQ_DUPLICATE_DIR=$COMPANIES_EXPORT_DATA_DIR/processed/erroneous/duplicate
+export COMPANIES_EXPORT_DATA_SEQ_MALFORMED_DIR=$COMPANIES_EXPORT_DATA_DIR/processed/erroneous/malformed
+
 
 export COMPANIES_INGEST_THREADS=4
 export COMPANIES_INGEST_FSCK_CLEAN=false
