--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/pom.xml
@@ -20,6 +20,11 @@
 			<version>${project.version}</version>
 			<classifier>hadoop-job</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudera.companies.core</groupId>
+			<artifactId>com.cloudera.companies.core.query</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
