--- a/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
+++ b/com.cloudera.companies.core/com.cloudera.companies.core.assembly/src/main/assembly/layout/bin/companies.env
@@ -8,6 +8,10 @@ export COMPANIES_EXPORT_DATA_SEQ_CLEANSED_DIR=$COMPANIES_EXPORT_DATA_DIR/process
 export COMPANIES_EXPORT_DATA_SEQ_DUPLICATE_DIR=$COMPANIES_EXPORT_DATA_DIR/processed/erroneous/duplicate
 export COMPANIES_EXPORT_DATA_SEQ_MALFORMED_DIR=$COMPANIES_EXPORT_DATA_DIR/processed/erroneous/malformed
 
-
 export COMPANIES_INGEST_THREADS=4
 export COMPANIES_INGEST_FSCK_CLEAN=false
+
+function line_item_header() {
+  echo "" && echo "-------------------------------------------------------------------------------" && echo "$1" && echo "-------------------------------------------------------------------------------" && echo "" && echo "" 
+}
+
