--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+		<project.runtime.heap.max>2048</project.runtime.heap.max>
+
 	</properties>
 
 	<profiles>
@@ -133,7 +135,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.9</version>
 					<configuration>
-						<argLine>-Xmx1024m</argLine>
+						<argLine>-Xmx${project.runtime.heap.max}m</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
