--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
@@ -48,13 +48,13 @@
 						<phase>process-sources</phase>
 						<configuration>
 							<target>
-								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop" />
 								<symlink
 									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
 									resource="${project.build.directory}/${project.runtime-test-dir}/hadoop-${hadoop.version}"
 									failonerror="false" overwrite="true" />
 								<echo
-									file="${project.build.directory}/${project.runtime-test-dir}/hadoop//etc/hadoop/hadoop-env.sh"
+									file="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop/hadoop-env.sh"
 									append="true">									
 									export HADOOP_CLIENT_OPTS="$HADOOP_CLIENT_OPTS -Xmx${project.runtime.heap.max}m"
 								</echo>
